--- a/kubernetes/n8n-service.yaml
+++ b/kubernetes/n8n-service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    service: n8n
   name: n8n
   namespace: n8n
+  labels:
+    service: n8n
 spec:
-  type: LoadBalancer
-  ports:
-    - name: "5678"
-      port: 5678
-      targetPort: 5678
-      protocol: TCP
+  type: ClusterIP
   selector:
     service: n8n
+  ports:
+    - port: 5678
+      targetPort: 5678
+      protocol: TCP
+      name: http
