--- a/kubernetes/postgres-claim0-persistentvolumeclaim.yaml
+++ b/kubernetes/postgres-claim0-persistentvolumeclaim.yaml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: postgresql-pv
+spec:
+  capacity:
+    storage: 5Gi
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: local-path
+  hostPath:
+    path: "/mnt/data/postgres"
+---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -8,4 +21,4 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 300Gi
+      storage: 5Gi
