--- a/kubernetes/postgres-headless-service.yaml
+++ b/kubernetes/postgres-headless-service.yaml
@@ -1,16 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    service: postgres
-  name: postgres-service
+  name: postgres
   namespace: n8n
 spec:
   clusterIP: None
   ports:
-    - name: "5432"
-      port: 5432
+    - port: 5432
       targetPort: 5432
-      protocol: TCP
   selector:
     app: postgres
