--- a/kubernetes/postgres-secret.yaml
+++ b/kubernetes/postgres-secret.yaml
@@ -5,8 +5,8 @@ metadata:
   name: postgres-secret
 type: Opaque
 stringData:
-  POSTGRES_USER: changeUser
-  POSTGRES_PASSWORD: changePassword
+  POSTGRES_USER: n8n_user
+  POSTGRES_PASSWORD: S3cur3P@ssw0rd!notelocreesnitu
   POSTGRES_DB: n8n
-  POSTGRES_NON_ROOT_USER: changeUser
-  POSTGRES_NON_ROOT_PASSWORD: changePassword
+  POSTGRES_NON_ROOT_USER: n8n_user
+  POSTGRES_NON_ROOT_PASSWORD: S3cur3P@ssw0rd!notelocreesnitu
