--- a/kubernetes/lol/n8n-ha/03-deployment-n8n-main.yaml
+++ b/kubernetes/lol/n8n-ha/03-deployment-n8n-main.yaml
@@ -62,6 +62,8 @@ spec:
           value: https://n8n.localhost
         - name: N8N_SECURE_COOKIE
           value: "true"
+        - name: N8N_COMMUNITY_PACKAGES_ALLOW_TOOL_USAGE
+          value: "true"
         - name: N8N_DIAGNOSTICS_ENABLED
           value: "false"
         - name: DB_POSTGRESDB_HOST
